# MandelbrotCUDA

./: CMakeLists.txt
Mandelbrot/: CMakeLists.txt  MainWindow.cu  MainWindow.cuh  main.cu
